	* New and changed library requirements:
	  - POPT library: MOC now requires libpopt
	* Documentation:
	  - Improved wording of some error messages
	  - Added environment variables section to the manpage
	* Removed functionality:
	  - Transitional code from the previous release
	  - autogen.sh in favour of autoreconf(1)
	  - Deprecated ffmpeg-config support
	  - Warning of changed executable name
	* Changed functionality:
	  - Decoupled mono-mixing from softmixer
	* Added functionality:
	  - Introduced in-memory circular logging buffer
	  - Introduced MOCP_POPTRC environment variable
	  - Introduced MOCP_OPTS environment variable
	* New and changed command line options:
	  - echo-args: Show POPT-interpreted command line arguments
	* Changes to supported formats and codecs:
	  - VQF: now supported via FFmpeg/LibAV
	  - TTA: now supported via FFmpeg/LibAV
	* Miscellaneous
	  - Improved logging from ALSA sound driver and library
	  - Warn of TagLib version requirement rising to 1.5

2.5.1  [2016-02-24]
	* Significant bug fixes:
	  - Corrected the setting of linked libraries for Berkeley DB
	  - Fixed ALSA volume setting problem (Tomasz Golinski)
	  - Fixed clearing of stream status message on error
	  - Resolved FFmpeg/LibAV's downmixing API issues (Andreas Cadhalpun)
	  - Removed duplicate logging of fatal error messages
	* Miscellaneous:
	  - Adapted to FFmpeg 3.0 API
	  - Warn of FFmpeg/LibAV version requirement rising to 1.0/10.0
	  - Warn of pending POSIX.1-2001 compliance requirement
	  - Fixed several warnings and errors on OpenBSD (Brent Cook)
	  - Fixed various (and potential) segfaults (Daniel T. Borelli,
	    Hendrik Iben, Rastislav Barlik)
	  - Fixed various resource leakages
	  - Silenced various compiler warnings
	  - Added instructions on building with autoreconf

2.5.0 - "Consolidation"  [2014-08-13]
	* Autotools and packaging changes:
	  - Upgraded autoconf version requirement to 2.60
	  - Added '--with-alsa' to suppress ALSA sound driver inclusion