@@ -53,7 +53,6 @@ enum key_cmd
 	KEY_CMD_GO_DIR,
 	KEY_CMD_GO_DIR_UP,
 	KEY_CMD_TOGGLE_SHUFFLE,
-	KEY_CMD_NEXT_SEARCH,
 	KEY_CMD_CANCEL,
 	KEY_CMD_GO_URL,
 	KEY_CMD_VOLUME_10,
